Fix nav overflow

--- a/msc_root/msc_site/static/responsive.css
+++ b/msc_root/msc_site/static/responsive.css
@@ -61,6 +61,7 @@ tt {
 	left: 0px;
 	list-style-position: inside;
 	margin-left: -10px;
+	overflow-wrap: break-word;
 }
 #nav li a {
 	text-decoration: none;
